8261401-test-fixes