@@ -61,6 +61,11 @@ public class TestLargePageUseForHeap {
     }
 
     static boolean checkLargePageEnabled(OutputAnalyzer output) {
+        String lp = output.firstMatch("Large Page Support: (\\w*)", 1);
+        // Make sure large pages really are enabled.
+        if (lp == null || lp.equals("Disabled")) {
+            return false;
+        }
         // This message is printed when tried to reserve a memory with large page but it failed.
         String errorStr = "Reserve regular memory without large pages";
         String heapPattern = ".*Heap: ";
@@ -84,7 +89,7 @@ public class TestLargePageUseForHeap {
         pb = ProcessTools.createJavaProcessBuilder("-XX:+UseG1GC",
                                                    "-XX:G1HeapRegionSize=" + regionSize,
                                                    "-Xmx128m",
-                                                   "-Xlog:pagesize,gc+heap+coops=debug",
+                                                   "-Xlog:gc+init,pagesize,gc+heap+coops=debug",
                                                    "-XX:+UseLargePages",
                                                    "-version");
 
@@ -97,7 +102,7 @@ public class TestLargePageUseForHeap {
         pb = ProcessTools.createJavaProcessBuilder("-XX:+UseG1GC",
                                                    "-XX:G1HeapRegionSize=" + regionSize,
                                                    "-Xmx128m",
-                                                   "-Xlog:pagesize,gc+heap+coops=debug",
+                                                   "-Xlog:gc+init,pagesize,gc+heap+coops=debug",
                                                    "-XX:-UseLargePages",
                                                    "-version");
 
